--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
     "dir": "ltr",
     "lang": "en",
     "name": "Wine Tasting Flavor Chart",
-    "scope": "/flavor-tree/",
+    "scope": "/wine-flavors/",
     "display": "browser",
-    "start_url": "https://levimcg.github.io/flavor-tree/",
+    "start_url": "https://levimcg.github.io/wine-flavors/",
     "short_name": "Flavor Tree",
     "theme_color": "transparent",
     "description": "A wine tasting flavor wheel with a mobile-friendly view",
