--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,10 @@
     "display": "minimal-ui",
     "start_url": "https://levimcg.github.io/wine-flavors/",
     "short_name": "Flavor Tree",
-    "theme_color": "transparent",
+    "theme_color": "#6e2273",
     "description": "A wine tasting flavor wheel with a mobile-friendly view",
     "orientation": "any",
-    "background_color": "transparent",
+    "background_color": "#6e2273",
     "related_applications": [],
     "prefer_related_applications": false,
     "icons": [
