--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "theme_color": "#6e2273",
     "description": "A wine tasting flavor wheel with a mobile-friendly view",
     "orientation": "any",
-    "background_color": "#6e2273",
+    "background_color": "#6E2273",
     "related_applications": [],
     "prefer_related_applications": false,
     "icons": [
